<resources>
    <string name="app_name">Car Launcher</string>
    <string name="status_bar_time">12:00</string>
    <string name="status_bar_date">2024年01月01日 周一</string>
    <string name="nav_bar_back">返回</string>
    <string name="nav_bar_home">主页</string>
    <string name="nav_bar_recent">最近任务</string>
    <string name="nav_bar_drawer">应用抽屉</string>
    <string name="drawer_sort_name">按名称</string>
    <string name="drawer_sort_usage">按使用</string>
    <string name="notification_title">通知</string>
    <string name="notification_empty">暂无通知</string>
    <string name="settings_title">设置</string>
    <string name="settings_theme">主题设置</string>
    <string name="settings_theme_light">白天模式</string>
    <string name="settings_theme_dark">黑夜模式</string>
    <string name="settings_theme_auto">自动模式</string>
    <string name="settings_save">保存</string>
    <string name="quick_apps">快捷应用</string>
    <string name="clock_weather">时钟天气</string>
    <string name="accessibility_service_description">车载桌面无障碍服务，用于系统级交互控制</string>
    <string name="car_control_title">车机控制</string>
    <string name="display_control_title">显示控制</string>
    <string name="permission_management">权限管理</string>
    <string name="floating_map_title">悬浮地图</string>

    <!-- 应用抽屉 -->
    <string name="search_app">搜索应用</string>

    <!-- 通知 -->
    <string name="no_notification">暂无通知</string>

    <!-- 车机控制 -->
    <string name="air_condition_control">空调控制</string>
    <string name="ac_power">开关</string>
    <string name="temp_up">升温</string>
    <string name="temp_down">降温</string>
    <string name="fan_up">风量+</string>
    <string name="fan_down">风量-</string>
    <string name="ac_mode">模式</string>
    <string name="window_control">车窗控制</string>
    <string name="window_front_up">前窗升</string>
    <string name="window_front_down">前窗降</string>
    <string name="window_rear_up">后窗升</string>
    <string name="window_rear_down">后窗降</string>
    <string name="other_control">其他控制</string>
    <string name="sunroof_open">开天窗</string>
    <string name="sunroof_close">关天窗</string>
    <string name="trunk_open">开后备箱</string>

    <!-- 显示控制 -->
    <string name="screen_control">屏幕控制</string>
    <string name="screen_off">熄屏</string>
    <string name="screen_on">亮屏</string>
    <string name="screen_brightness">屏幕亮度</string>
    <string name="instrument_control">仪表控制</string>
    <string name="instrument_brightness">仪表亮度</string>
    <string name="project_map">投屏地图</string>
    <string name="stop_map">停止投屏</string>
</resources>
