<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_bar_height"
    android:background="@color/nav_bar_bg"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingHorizontal="@dimen/padding_large"
    android:weightSum="10">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nav_bar_back"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="0dp"
        android:layout_height="@dimen/nav_bar_icon_height"
        android:layout_weight="2"
        android:contentDescription="@string/nav_bar_back"
        app:icon="@drawable/ic_back" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nav_bar_home"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="0dp"
        android:layout_height="@dimen/nav_bar_icon_height"
        android:layout_weight="2"
        android:contentDescription="@string/nav_bar_home"
        app:icon="@drawable/ic_home" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nav_bar_recent"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="0dp"
        android:layout_height="@dimen/nav_bar_icon_height"
        android:layout_weight="2"
        android:contentDescription="@string/nav_bar_recent"
        app:icon="@drawable/ic_recent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nav_bar_drawer"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="0dp"
        android:layout_height="@dimen/nav_bar_icon_height"
        android:layout_weight="4"
        android:contentDescription="@string/nav_bar_drawer"
        app:icon="@drawable/ic_apps" />

</LinearLayout>